# Shell

./: .gitignore  README.md  meson.build
src/: App.vala  Utils.vala  com.github.XtremeTHN.Shell.gresource.xml  meson.build
src/Blueprints/: topbar.blp
src/Components/: TopBar.vala
src/styles/: colors.scss  main.scss  meson.build  style.css  style.css.map
src/styles/topbar/: index.scss
